# vyos-webui

./: .gitignore  DEPLOY.md  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  start_server.py
backend/app/: __init__.py
backend/app/api/v1/: auth.py  backup.py  bgp.py  firewall_final.py  isis.py  logs.py  network.py  system.py  users.py  vpn.py
backend/app/core/: config.py  config_parser.py  config_rollback.py  config_validator.py  security.py  vyos_syntax.py
backend/app/models/: user.py
backend/app/services/: config_backup.py  firewall.py  logging_monitoring.py  network.py  ssh_pool.py  system_info.py  user.py  vpn.py  vyos_command.py  vyos_config.py  vyos_config_service.py  vyos_parser.py  vyos_service.py  vyos_ssh.py
debian/: README_BUILD.md  changelog  control  copyright  postinst  postrm  preinst  prerm  rules  start.sh  status.sh  stop.sh  vyos-webui-conf-mode.py  vyos-webui-node.def  vyos-webui-wrapper  vyos-webui.conf  vyos-webui.install  vyos-webui.logrotate  vyos-webui.nginx  vyos-webui.service  vyos-webui.sudoers  watch
frontend/: .eslintrc.json  Dockerfile  Dockerfile.prod  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: admin.ts  client.ts  firewall.ts  index.ts  logs.ts  network.ts  system.ts  types.ts  vpn.ts
scripts/: build-deb.sh  build-package.sh  cleanup.sh  deploy-on-vyos.sh  deploy.sh  deploy_to_vyos.sh  migrate.py  version-manager.sh
(+50 files in other folders)
